@@ -20,9 +20,9 @@ SKIP: {
 
     ok $R;
 
-    ok $R->startR;
+    ok $R->startR();
 
-    ok $R->Rbin;
+    ok $R->Rbin() =~ /\S+/;
 
     ok $R->send(
             q`postscript("file.ps" , horizontal=FALSE , width=500 , height=500 , pointsize=1)`
@@ -32,12 +32,12 @@ SKIP: {
 
     ok $R->send( qq`x = 123 \n print(x)` );
 
-    my $ret = $R->read;
+    my $ret = $R->read();
     ok $ret =~ /^\[\d+\]\s+123\s*$/;
 
     ok $R->send( qq`x = 456 \n print(x)` );
 
-    $ret = $R->read;
+    $ret = $R->read();
     ok $ret =~ /^\[\d+\]\s+456\s*$/;
 
     ok $R->stopR();
